--- a/wp-content/themes/pgabesancon/style.css
+++ b/wp-content/themes/pgabesancon/style.css
@@ -157,28 +157,36 @@ h1 {
 
 h2 {
 	font-size: 30px;
-	margin: 25px 0;
+	margin: 50px 0 15px;
 	font-weight: 300;
+}
+
+h2:first-of-type{
+	margin: 20px 0 15px;
 }
 
 h3 {
 	font-size: 22px;
 	margin: 22px 0;
+	font-weight: 300;
 }
 
 h4 {
 	font-size: 20px;
 	margin: 25px 0;
+	font-weight: 300;
 }
 
 h5 {
 	font-size: 18px;
 	margin: 30px 0;
+	font-weight: 300;
 }
 
 h6 {
 	font-size: 16px;
 	margin: 36px 0;
+	font-weight: 300;
 }
 
 address {
@@ -670,6 +678,7 @@ input[type="reset"]:active {
 .widget img,
 .wp-caption {
 	max-width: 100%;
+	width:initial !important;
 }
 
 /* Make sure images with WordPress-added height and width attributes are scaled correctly. */
@@ -1173,7 +1182,7 @@ ul.nav-menu .focus > ul,
 
 .entry-content img.alignleft,
 .entry-content .wp-caption.alignleft {
-	margin-left: -60px;
+	/*margin-left: -60px;*/
 }
 
 .entry-content img.alignright,
@@ -2727,7 +2736,16 @@ blockquote:before{
 
 iframe#visite_virtuelle{
 	width:100%;
-	height:700px;
+	height:640px;
+	overflow: hidden;
+}
+
+iframe#steinpilze{
+	display: block;
+	width: 100%;
+	max-width: 550px;
+	position: relative;
+	margin: 0 auto;
 }
 
 /**
