--- a/wp-content/addons/visite_virtuelle/style.css
+++ b/wp-content/addons/visite_virtuelle/style.css
@@ -3,7 +3,7 @@ body{font-family: 'Roboto';}
 
 #player_visite{position: relative;width:100%;display: block;background: #000;overflow: hidden;}
 #player_visite>#visite{width: 100%;}
-#loader{position: absolute;top:0;left:0;background: rgba(0,0,0,0.5);width: 100%;height: 100%;z-index: 800;}
+#loader{display:none; position: absolute;top:0;left:0;background: rgba(0,0,0,0.5);width: 100%;height: 100%;z-index: 800;}
 #loader>div{position:relative;margin:25% auto 0;width:200px;text-align: center;color:#FFF;font-weight: 400;line-height: 2em;}
 .overlays{background: rgba(0,0,0,0.5);position: absolute;display: none;box-sizing:border-box;}
 .move_controls{width:10%;height:100%;padding:25% 0 0;}
@@ -17,7 +17,7 @@ body{font-family: 'Roboto';}
 #replay{display:none;position: absolute;top:0;left:0;background: rgba(0,0,0,0.7);width: 100%;height: 100%;}
 #replay>div{position:relative;margin:25% auto 0;width:200px;text-align: center;color:#FFF;font-weight: 400;line-height: 2em;}
 #replay>div>a{margin:0 auto;display: block;width:64px;height:64px;background: url(img/repeat.png) no-repeat top left;}
-#play{display:none;position: absolute;top:0;left:0;background: rgba(0,0,0,0.5);width: 100%;height: 100%;}
+#play{display:block;position: absolute;top:0;left:0;background: rgba(0,0,0,0.5);width: 100%;height: 100%;}
 #play>div{position:relative;margin:25% auto 0;width:200px;text-align: center;color:#FFF;font-weight: 400;line-height: 2em;}
 #play>div>a{margin:0 auto;display: block;width:128px;height:84px;background: url(img/play.png) no-repeat top left;}
 #player_visite a{color:#FFF;text-decoration:none;}
